new file:   todo_list/base/__pycache__/forms.cpython-39.pyc 	modified:   todo_list/base/__pycache__/views.cpython-39.pyc 	new file:   todo_list/base/forms.py 	modified:   todo_list/base/views.py 	modified:   todo_list/templates/partials/base.html

--- a/todo_list/templates/partials/base.html
+++ b/todo_list/templates/partials/base.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
     <style>
       body{
-        background-color: #FAFAFA;
+        background-color: #c0acac;
         font-family: 'Nunito', sans-serif;
         padding-top: 50px;
       }
@@ -29,7 +29,7 @@
         font-family: 'Raleway', sans-serif;
       }
       a,p{
-        color: #4b5156;
+        color: #5b5f63;
       }
 
       .container{
@@ -119,7 +119,7 @@
 
       .btn{
         border: 1px solid #EB796F;
-        background-color: #FAFAFA;
+        background-color: #fff7f6;
         color: #EB796F;
         padding: 10px;
         font-size: 14px;
